fix: fix no mouse scrollbar

--- a/packages/zent/assets/grid.pcss
+++ b/packages/zent/assets/grid.pcss
@@ -143,6 +143,7 @@ $border-color: $theme-stroke-7;
     .zent-grid-header {
       overflow-x: scroll;
       margin-bottom: -15px;
+      padding-bottom: 15px;
     }
   }
 
